[tool.poetry]
name = "fast-api-blog"
version = "0.1.0"
description = ""
authors = ["Gilson Filho <me@gilsondev.in>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.2"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
